# social_media_analyzer

./: .dockerignore  .gitignore  ARCHITECTURE_FIX.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_preprocessing.py  tiktok_data.parquet
data/tiktok_data/: tiktok_data.parquet
data_preprocessing/: preprocess.py
docker/: .dockerignore  Dockerfile  Dockerfile.mlflow
experiments/: experiment_configs.yaml
fine_tuning/: train_torch.py
fine_tuning/data_preprocessing/: __init__.py
fine_tuning/models/: lightgbm_model.txt
finetuning/: test.py  train.py
finetuning/data/tiktok_data/: tiktok_data_cleaned.parquet
finetuning/preprocess/: preprocess.py
finetuning/utils/: data_stat.py  temp.py
md/: DEPLOYMENT_CHECKLIST.md  MLflow_README.md
modelfactory/: __init__.py  test.py  train.py
modelfactory/preprocess/: preprocess.py
models/: clip_regressor.py
notebooks/: process_tiktok_data.ipynb  temp.ipynb
runpod/: __init__.py  launch_server.sh  launch_training.sh
scripts/: mlflow_manager.py  s3_migration.py
serving/: __init__.py  app.py
src/: __init__.py  app.py  config.py  predictor.py
src/api/: routes.py
src/modelfactory/: train.py
src/models/: __init__.py
src/schemas/: __init__.py  request.py  response.py
src/services/: __init__.py  prediction.py  preprocessing.py
src/utils/: config.py  metrics.py  text_processing.py
training/: __init__.py  evaluate_torch.py  test_torch.py  train_lightgbm.py  train_torch.py
utils/: __init__.py  config.py  metrics.py  text_processing.py
