[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-media-analyze-microserver"
version = "0.1.0"
description = "Social media engagement prediction microserver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "peft>=0.4.0",
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "modelfactory"]