[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-media-analyze-microserver"
version = "0.1.0"
description = "Social media engagement prediction microserver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML dependencies
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "peft>=0.4.0",
    # Data processing
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    # FastAPI and web server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Text processing and sentiment analysis
    "emoji>=2.0.0",
    "regex>=2022.1.18",
    "ftfy>=6.1.1",
    # Utilities
    "python-json-logger>=2.0.2",
    "tqdm>=4.65.0",
    # Jupyter (if needed for development)
    "ipykernel>=6.29.5",
    "pyarrow>=10.0.0",
    "mlflow>=2.22.1",
    "boto3>=1.38.35",
    "pathlib>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

test = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/social-media-analyze-microserver"
Documentation = "https://github.com/yourusername/social-media-analyze-microserver#readme"
Repository = "https://github.com/yourusername/social-media-analyze-microserver.git"
Issues = "https://github.com/yourusername/social-media-analyze-microserver/issues"

[tool.hatch.build.targets.wheel]
packages = ["src", "modelfactory"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
